Update privacy policy and fix nav spacing
- Replace privacy-policy.pdf with OAF Privacy & Cookie Policy dated March 18, 2026
- Add horizontal padding to nav menu items to prevent links from crowding at narrow widths

--- a/public/styles/header.scss
+++ b/public/styles/header.scss
@@ -25,6 +25,7 @@ $mobile-breakpoint: 1020px;
     @media screen and (min-width: $mobile-breakpoint) {
       color: black;
       justify-content: start;
+      padding: 0 12px;
     }
   }
 
